# cantor

./: .gitignore  Cargo.toml  README.md  example.toml  install.sh
extra/: cantor.service
src/: bar.rs  main.rs
src/modules/: mod.rs  workspaces.rs
