[package]
name = "cantor"
version = "0.1.0"
edition = "2024"
authors = ["etoql"]
description = "Status bar for Wayland."
license = "MIT"

[dependencies]
smithay-client-toolkit = "0.20.0"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
toml = "1.1.3"
serde = { version = "1.0.229", features = ["derive"] }
# callop = "0.14"
# callop-wayland-source = 